@@ -251,7 +251,8 @@ AgentState::OnUnlink()
       return;
     }
 
-    game_state->ReturnUniform(GetTeamIndex(), GetUniformNumber());
+    game_state->ReturnUniform(GetTeamIndex(), GetUniformNumber(),
+        GetRobotType());
 }
 
 bool
